Live Data/mdapipkg/unpackaged/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Asset_Family__c</fullName>
        <description>This is the Product (Asset) Family as per the new Nominal Structure in Dimensions</description>
        <label>Asset Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>aCloud</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>Dimensions</fullName>
                </value>
                <value>
                    <fullName>FocalPoint</fullName>
                </value>
                <value>
                    <fullName>Goldmine</fullName>
                </value>
                <value>
                    <fullName>Orchestrate</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>PeoplePlanner</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Hosting HCM</fullName>
                </value>
                <value>
                    <fullName>Hosting NFP</fullName>
                </value>
                <value>
                    <fullName>Hosting FMS</fullName>
                </value>
                <value>
                    <fullName>Hosting SCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>This is the Module from the Contract Line in SME... It should be the same as the Linked Product but upserted as it&apos;s own field in case there is an issue with the linked products</description>
        <label>Module</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Price__c</fullName>
        <label>Renewal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>